trunk/Archive2/08/52d9b90889231b/output
main.cpp:1171:37: error: conversion from 'int' to non-scalar type 'unique_tuple<long int, float, long int> {aka std::tuple<long int, float>}' requested
 unique_tuple<long,float,long> foo = 42;
                                     ^
